workshop04/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: clientns
  labels:
    createdby: ken
