workshop04/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ing
  labels:
    name: wordpress-ing
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: "5"
spec:
  ingressClassName: nginx
  rules:
  - host: 144.126.241.223.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: wordpress-cluster
            port:
              number: 80
